ultimas modificaciones de Febrero 2023

--- a/index.html
+++ b/index.html
@@ -51,18 +51,18 @@
             <h2 class="titulo-seccion">Sobre Mi</h2>
             <h3>Detalles personales</h3>
 
-            <p class="especial">Actualmente soy programador Front-end y estoy estudiando la carrera Ingeniería en sistemas de información</p>
+            <p class="especial">Programador Front-end y estudiante de la carrera Ingeniería en sistemas de información</p>
 
             <div class="fila">
                 <div class="col">
                     <i class="fa-solid fa-user"></i>
                     <span class="titulo-detalle">Perfil</span>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis, provident esse. Nesciunt quod eveniet dolorem necessitatibus iure, suscipit similique provident fugiat excepturi commodi</p>
+                    <p>Actualmente soy estudiante avanzado de Ing. en sistemas de información y estoy adquiriendo experiencia como programador mediante cursos online</p>
                 </div>
                 <div class="col">
                     <i class="fa-solid fa-location-pin"></i>
                     <span class="titulo-detalle">Ubicación</span>
-                    <p>Vivo en la sede capital de la provincia de La Rioja, Argentina.</p>
+                    <p>La Rioja, Argentina. Sede capital</p>
                 </div>
                 <div class="col">
                     <i class="fa-solid fa-flag"></i>
@@ -162,7 +162,7 @@
                                 <h3>2014 - 2023</h3>
                             </td>
                             <td rowspan="2" class="descripcion">
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero at soluta quos explicabo dolor recusandae, dolorum.
+                                Actualmente estoy rindiendo finales del cuarto año de mi carrera en la UNLAR.
                             </td>
                         </tr>
                         <tr>
@@ -179,7 +179,7 @@
                                 <h3>2020 - 2023</h3>
                             </td>
                             <td rowspan="2" class="descripcion">
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero at soluta quos explicabo dolor recusandae, dolorum.
+                                Conocí los cursos online de programación en épocas de la pandemia del COVID-19.
                             </td>
                         </tr>
                         <tr>
@@ -199,7 +199,7 @@
                                 <h3>2 Años</h3>
                             </td>
                             <td rowspan="2" class="descripcion">
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero at soluta quos explicabo dolor recusandae, dolorum.
+                                Conocí la empresa Tsfot hace 3 años.
                             </td>
                         </tr>
                         <tr>
@@ -216,13 +216,13 @@
                                 <h3>2 Años</h3>
                             </td>
                             <td rowspan="2" class="descripcion">
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero at soluta quos explicabo dolor recusandae, dolorum.
+                                empecé a diseñar páginas web durante mi carrera en la Universidad.
                             </td>
                         </tr>
                         <tr>
                             <td>
                                 <h4>Software Inc.</h4>
-                                <p>Diseñadr Principal</p>
+                                <p>Diseñador Principal</p>
                             </td>
                         </tr>
                     </table>
@@ -235,7 +235,7 @@
     <section class="contacto" id="contacto">
         <div class="contenido-seccion">
             <h2 class="titulo-seccion">Contacto</h2>
-            <h3>Estos son mis medios de contactos !</h3>
+            <h3>Estos son mis medios de contacto</h3>
 
             <div class="fila">
                 <div class="col">
